@@ -35,6 +35,8 @@ $_lang['setting_resourcewatcher.new_active'] = 'Active on resource creation';
 $_lang['setting_resourcewatcher.new_active_desc'] = 'Define if the plugin is active upon resource creation';
 $_lang['setting_resourcewatcher.new_email'] = 'Mail address(es)';
 $_lang['setting_resourcewatcher.new_email_desc'] = 'The mail address (or comma separated list) to send the notification to';
+$_lang['setting_resourcewatcher.new_hooks'] = 'Hooks';
+$_lang['setting_resourcewatcher.new_hooks_desc'] = 'Hooks, comma separated, to be run upon resource creation';
 $_lang['setting_resourcewatcher.new_subject'] = 'Mail subject';
 $_lang['setting_resourcewatcher.new_subject_desc'] = 'The subject of the notification mail';
 $_lang['setting_resourcewatcher.new_tpl'] = 'Message Chunk';
@@ -44,6 +46,8 @@ $_lang['setting_resourcewatcher.upd_active'] = 'Active on resource update';
 $_lang['setting_resourcewatcher.upd_active_desc'] = 'Define if the plugin is active upon resource update';
 $_lang['setting_resourcewatcher.upd_email'] = 'Mail address(es)';
 $_lang['setting_resourcewatcher.upd_email_desc'] = 'The mail address (or comma separated list) to send the notification to';
+$_lang['setting_resourcewatcher.upd_hooks'] = 'Hooks';
+$_lang['setting_resourcewatcher.upd_hooks_desc'] = 'Hooks, comma separated, to be run upon resource update';
 $_lang['setting_resourcewatcher.upd_subject'] = 'Mail subject';
 $_lang['setting_resourcewatcher.upd_subject_desc'] = 'The subject of the notification mail';
 $_lang['setting_resourcewatcher.upd_tpl'] = 'Message Chunk';
