@@ -4,8 +4,9 @@ Changelog for ResourceWatcher.
 
 2011/09/xx: v1.0.0-rc2
 ========================================================
+- Basic support for hooks
 - Multi recipients support
-- Ability to use fiels as chunks (+ 2 default message
+- Ability to use files as chunks (+ 2 default message
   chunks) via @splittingred getChunk method
 - Added settings descriptions
 
